Fixed Image Visibility Issue

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     background-color: black;
 }
 .main{
-    background-image: url("https://assets.nflxext.com/ffe/siteui/vlv3/1600634…ignuptwoweeks-perspective_alpha_website_small.jpg");
+    background-image: url("bg.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: max(1200px, 100vw);
